--- a/client/src/styling/main.scss
+++ b/client/src/styling/main.scss
@@ -165,6 +165,7 @@ h1 {
 
 h5 {
     padding-left: 20px;
+    margin-bottom: 0;
 }
 
 /* Larger than phablet */
@@ -205,10 +206,6 @@ p {
 
 .content * {
     margin: 0 5px;
-
-    div.searchResults {
-        display: block;
-    }
 }
 
 footer {
@@ -292,10 +289,19 @@ nav {
     }
 }
 
+img.thumb {
+    width: 100%;
+    height: auto;
+}
+
 /*
 * Links
 * ––––––––––––––––––––––––––––––––––––––––––––––––––
 */
+
+h3 a {
+    color: #{vars.$color-nav-link}
+}
 
 a {
     color: #{vars.$color-links};
@@ -303,8 +309,13 @@ a {
     width: fit-content;
     text-decoration: none;
 }
+
 a:hover {
     color: #{vars.$color-links-hover};
+}
+
+a.borderless {
+    border: none;
 }
 
 /*
@@ -424,18 +435,6 @@ li {
 }
 
 /*
-* Tables
-* ––––––––––––––––––––––––––––––––––––––––––––––––––
-*/
-
-th,
-td {
-    padding: 2px 15px;
-    text-align: left;
-    border-bottom: 1px solid #{vars.$border-color-table};
-}
-
-/*
 * Spacing
 * ––––––––––––––––––––––––––––––––––––––––––––––––––
 */
@@ -496,4 +495,12 @@ hr {
 
 .hidden {
     display: none;
+}
+
+.block {
+    display: block;
+}
+
+.linkCursor {
+    cursor: pointer;
 }
