--- a/client/src/styling/carousel.scss
+++ b/client/src/styling/carousel.scss
@@ -6,6 +6,14 @@
     top: 40%;
 }
 
+.control-arrow {
+    background-color: gray !important;
+    width: 40px;
+    height: 40px;
+    padding-bottom: 40px !important;
+    border: solid 1px white !important;
+}
+
 .slide {
     max-height: 300px;
 }
